# CVA_NET

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  logging.conf  pyproject.toml  requirements.txt
archives/cva_net/: utils.py
archives/cva_net/alexnet/: __init__.py  model.py
archives/cva_net/classification/: data_merge.py  main.py  trainer.py
archives/cva_net/resnet50/: __init__.py  model.py
src/cva_net/: utils.py
src/cva_net/alexnet/: __init__.py  model.py
src/cva_net/alexnet/backbone/: repository.py
src/cva_net/alexnet/jepa/: factory.py  model.py  repository.py  summary.py
src/cva_net/alexnet/jepa/training/: checkpoint.py  dataset.py  factory.py  history.py  model.py  monitor.py  repository.py
src/cva_net/alexnet/jepa/training/optimizer/: model.py  repository.py
src/cva_net/alexnet/jepa/training/optimizer/lr_scheduler/: repository.py
src/cva_net/classification/: dataset.py  dsplit.py  main.py  model.py  optimizer.py  scheduler.py  trainer.py  utils.py
src/cva_net/resnet18/: __init__.py  model.py
src/cvanet/alexnet/: factory.py  model.py  repository.py
src/cvanet/alexnet/backbone/: model.py  repository.py
src/cvanet/alexnet/jepa/: factory.py  model.py  repository.py
src/cvanet/alexnet/jepa/training/: checkpoint.py  dataset.py  factory.py  history.py  loss_fn.py  model.py  monitor.py  repository.py
src/cvanet/alexnet/jepa/training/optimizer/: factory.py  model.py  repository.py
src/cvanet/alexnet/jepa/training/optimizer/lr_scheduler/: factory.py  model.py  repository.py
src/cvanet/entrypoints/: alexnet.py
src/cvn/alexnet/: factory.py  model.py  repository.py  summary.py
src/cvn/alexnet/training/: checkpoint.py  dataset.py  factory.py  history.py  layer_freezing.py  loss_fn.py  model.py  monitor.py  repository.py  visual_validation.py
src/cvn/alexnet/training/metrics/: accuracy.py  precision.py  recall.py  utils.py
src/cvn/alexnet/training/optimizer/: model.py  repository.py
src/cvn/alexnet/training/optimizer/lr_scheduler/: factory.py  repository.py
src/cvn/backbone/: factory.py  model.py  repository.py
src/cvn/entrypoints/: alexnet.py  cmdparser.py
src/cvn/jepa/training/: dataset.py  factory.py  model.py
src/cvn/jepa/training/optimizer/: factory.py  model.py
src/cvn/jepa/training/optimizer/lr_scheduler/: factory.py  repository.py
tests/: run_image_masking.py  run_mask_collator.py  test_accuracy_score_function.py  test_classification_trainer.py  test_precision_score.py  test_recall_score.py  test_tensor_ops.py  test_train_result.py
