[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CVA_NET"
version = "0.1.0"
description = "A sample Python package"
readme = "README.md"
authors = [
    { name = "DOCTOR MOKIRA", email = "dr.mokira@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["computer-vision", "deep-learning", "cnn", "image-classification", "image-processing"]
dependencies = [
    "python-dotenv==1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/my-python-package"
"Bug Tracker" = "https://github.com/your-username/my-python-package/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
alexnet_model = "cva_net.alexnet.model:main"
resnet18_model = "cva_net.resnet18.model:main"
resnet50_model = "cva_net.resnet50.model:main"
cls_dataset = "cva_net.classification.dataset:main"
cls_data_split = "cva_net.classification.dsplit:main"
cls_data_merge = "cva_net.classification.data_merge:main"
cls_optimizer = "cva_net.classification.optimizer:main"
test_cls_trainer_fit = "cva_net.classification.trainer:test_fit_function"
train_classifier = "cva_net.classification.main:train"
