[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CVA_NET"
version = "0.1.0"
description = "A powerful, user-friendly open-source computer vision framework that simplifies the process of training and deploying state-of-the-art neural network models for various computer vision tasks."
readme = "README.md"
authors = [
    { name = "DOCTOR MOKIRA", email = "dr.mokira@gmail.com" },
]
maintainers = [
    { name = "CONSOLE ART CYBERNETIC", email = "ca.cybernetic@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
keywords = ["computer-vision", "deep-learning", "cnn", "image-classification", "image-processing", "jepa"]
dependencies = [
    "python-dotenv==1.0.0",
    "Pyyaml",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchinfo==1.8.0",
    "h5py==3.15.1",
    "tqdm==4.67.1",
    "matplotlib==3.10.7",
    "numpy==2.2.6",
    "Pillow",
]
requires-python = ">=3.10"
[project.optional-dependencies]
dev = [
    "ipython",
    "pytest==8.2",
]

[project.urls]
#"Homepage" = "https://github.com/your-username/my-python-package"
#"Bug Tracker" = "https://github.com/your-username/my-python-package/issues"

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 2
column_limit = 120

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
#alexnet_model = "cva_net.alexnet.model:main"
#resnet18_model = "cva_net.resnet18.model:main"
#resnet50_model = "cva_net.resnet50.model:main"
#cls_dataset = "cva_net.classification.dataset:main"
#cls_data_split = "cva_net.classification.dsplit:main"
#cls_data_merge = "cva_net.classification.data_merge:main"
#cls_optimizer = "cva_net.classification.optimizer:main"
#test_cls_trainer_fit = "cva_net.classification.trainer:test_fit_function"
#train_classifier = "cva_net.classification.main:train"
alexnet = "cvn.entrypoints.alexnet:main"
